--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.19.0",
+        "chart.js": "^2.9.3",
         "connect-mongo": "^3.2.0",
         "cookie-parser": "^1.4.5",
         "discord.js": "^12.2.0",
